Fix RIP header styles and align.

--- a/app/javascript/app/assets/stylesheets/layout.scss
+++ b/app/javascript/app/assets/stylesheets/layout.scss
@@ -10,7 +10,7 @@ h1 {
 
 h2 {
   font-family: $font-stack;
-  color: $dark-blue;
+  color: $off-black;
   font-size: 36px;
   font-weight: 600;
   margin-top: 32px;
