--- a/app/javascript/app/assets/stylesheets/resource_index_page.scss
+++ b/app/javascript/app/assets/stylesheets/resource_index_page.scss
@@ -6,9 +6,7 @@ $sidebar-width: 300px;
 .resource-index-page-sidebar {
   position: fixed;
   width: $sidebar-width;
-  top: 50px;
   left: 0px;
-  padding-top: 20px;
 }
 
 .resource-index-page-main-container {
